# wagtail-branching-workflows

./: .gitattributes  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  gulpfile.js  manage.py  package.json  pyproject.toml  requirements.txt  setup.cfg  tasks.py
.envs/: .dev.env.sample  .prod.env.sample  .test.env.sample
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
app/: .dockerignore  Dockerfile  entrypoint.sh  gulpfile.js  package.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tasks.py
app/.envs/: .dev.env.sample  .prod.env.sample  .test.env.sample
app/.envs/nginx/: example_nginx_https.conf
app/config/db/: Dockerfile
app/config/settings/: base.py  dev.py  production.py  test.py
app/docs/: index.rst
app/mysite/: conftest.py
app/mysite/base/: blocks.py  tests.py  views.py  wagtail_hooks.py
app/mysite/home/: apps.py  models.py  tests.py
app/mysite/reflections/: apps.py  mail.py  models.py  signal_handlers.py  wagtail_hooks.py
app/mysite/templates/: 404.html  500.html
app/mysite/tests/: factories.py
app/mysite/users/: tests.py
config/: urls.py  wsgi.py
config/settings/: base.py
docs/: conf.py
mysite/: conftest.py
mysite/base/: apps.py  views.py
mysite/home/: models.py
mysite/home/migrations/: 0001_initial.py
mysite/settings/: base.py  dev.py
mysite/templates/: base.html
mysite/templates/blocks/: blockquote.html  table_block.html
mysite/templates/nginx/: custom_403.html  custom_404.html  custom_500.html  custom_502.html  custom_503.html  custom_520.html  (+2 more)
mysite/users/: models.py
(+33 files in other folders)
