[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | (.*)/migrations
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
known_third_party = ["colorama", "django", "environ", "factory", "faker", "faker_e164", "invoke", "pytest", "sentry_sdk", "titlecase", "wagtail", "wagtail_factories", "yattag"]

[tool.commitizen]
version = "0.0.0"
version_files = [
    "mysite/__init__.py",
    "docs/conf.py",
    "mysite/blog/rss_feed_display.py",
]
tag_format = "v$major.$minor.$patch"
annotated_tag = true
update_changelog_on_bump = false
# changelog_file = "CHANGELOG.md"
# changelog_incremental = true
